# otomemo

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml
_audio_poc/: README.md  accent.py  analyze.py  batch_key.py  compare.py  f1_allin1.py  f1_beatthis.py  midi_truth.py  pyproject.toml
_dogfood_ui/: run.mjs  run2.mjs  run3.mjs  run4.mjs  shoot_editors.mjs  shoot_editors_mobile.mjs
apps/api/: _feas_beat.ts  _feas_contour.ts  _feas_demo.ts  _feas_irish.ts  _feas_movement.ts  _feas_rhythm.ts  package.json
apps/audio/: README.md  analyze.py  pyproject.toml
apps/web/: index.html  package.json  playwright.chat.config.ts  playwright.config.ts  tsconfig.json  vite.config.ts
apps/worker/: pyproject.toml
apps/worker/scripts/: measure_gen.py
apps/worker/src/cm_worker/: __init__.py  db.py  jobs.py  main.py  music_mcp.py  search.py  serve.py  worker.py
apps/worker/src/cm_worker/music/: __init__.py  analyze.py  bass.py  correct.py  generate.py  normalize.py  progressions.py  similar.py  theory.py
apps/worker/tests/: conftest.py  test_music.py  test_music_mcp.py  test_robustness.py  test_search.py  test_smoke.py  test_worker.py
deploy/systemd/: cm-api.service  cm-backup.service  cm-backup.timer  cm-music-mcp.service  cm-search.service  cm-worker.service  creative-manager.env.example  install.sh
docs/: architecture.md  backlog.md  check-later.md  creative-agent.md  deploy.md  design.md  requirements.md  status.md  usecases-chat.md  usecases-compose.md
docs/process/: confirm-list.md  e2e-test-plan.md  review-loop.md
docs/research/: 2026-06-21-generation-methods.md  2026-06-21-routing-scenarios.md  2026-06-22-association-spec-validation.md  2026-06-22-association-usecases.md  2026-06-22-chord-progression-engine.md  2026-06-22-jp-chord-sources.md  2026-06-22-key-degree-tech.md  2026-06-28-chord-harmony-ai-survey.md  2026-06-28-lyric-melody-ai-survey.md  2026-06-28-melody-ai-survey.md  2026-06-29-drum-sound-resolution.md  2026-06-29-melody-corpus-and-deform.md  2026-07-01-singing-voice-synthesis.md  2026-07-02-card-and-create-ui-patterns.md  2026-07-06-hayashibara-loop-reproduction.md  2026-07-06-surface-shiina-study.md  2026-07-06-vocaloid-folk-study.md  2026-07-06-within-song-loop-lens.md  2026-07-07-audio-to-neta-extraction-map.md  2026-07-07-debt-audit-and-handoff.md  2026-07-07-drums-bass-extraction-plan.md  2026-07-07-mid-term-improvement-plan.md  2026-07-07-next-dev-plan.md  2026-07-08-drum-pattern-extraction.md  2026-07-08-drum-transcription-journey.md  2026-07-08-melody-chord-audit.md  2026-07-09-brushup-audit-5areas.md  2026-07-09-melody-chord-critical-review.md  2026-07-09-melody-theory-gaps-and-plan.md  2026-07-10-68-grid-unify-16th.md  (+160 more)
scripts/: backup.sh  restart.sh  setup-fonts.sh  start-all.sh
(+460 files in other folders)
