[project]
name = "cm-worker"
version = "0.0.0"
description = "creative_manager Python worker (analysis, embeddings, generation, planner)"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
