[project]
name = "cm-worker"
version = "0.0.0"
description = "creative_manager Python worker (analysis, embeddings, generation, planner)"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
cm-worker = "cm_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cm_worker"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
