[project]
name = "cm-worker"
version = "0.0.0"
description = "creative_manager 意味検索サーバ（cm-search）。旧ジョブワーカー(cm-worker)は 2026-07-05 撤去＝生成/研究/MIDI取込は api(TS)へ移管し worker脑撤去完了。"
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers>=3.3",
    "numpy>=2",
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[project.scripts]
cm-search = "cm_worker.serve:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cm_worker"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
